tests/negative/test_data_member_init_not_baked.orb
import "tests/io.orb";

data Foo {
    i32 x = scan_i32();
}

fnc main() {}